--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
     /* Base styles */
     body {
-        @apply bg-main w-full h-full font-chanom overscroll-x-contain;
+        @apply bg-main w-full h-full font-chanom overscroll-x-contain m-0;
     }
 
     h1 {
